--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,5 @@
 {
   "name": "zzo-building",
   "compatibility_date": "2026-01-11",
-  "assets": {
-    "directory": "."
-  }
+  "pages_build_output_dir": "."
 }
